--- a/css/base.css
+++ b/css/base.css
@@ -131,7 +131,7 @@ footer{
 }
 
 .follow{
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     /* border: 1px solid black; */
