html頁面換logo圖檔

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 @import url(../css/reset.css);
 
-@import url(./base.css);
+@import url(../css/base.css);
 
 /* .about{
     /* background-image: url(../img/pexels-life-of-pix-9095.jpg);
