--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @import url(../css/reset.css);
 
-@import url(./base.css);
+@import url(../css/base.css);
 
 /* ---------banner------------- */
 .banner{
