--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,8 @@
 
 /* ---------banner------------- */
 .banner{
-    max-width: 100%;
-    height: 100vh;
+    max-width: 100vw;
+    height: 490px;
     position: relative;
     /* overflow: hidden; */
     display: flex;
@@ -30,7 +30,6 @@
     left:0;
     object-fit: cover;
     opacity: .5;
-
 }
 
 
