--- a/css/giftbox.css
+++ b/css/giftbox.css
@@ -1,26 +1,20 @@
-@import url(../css/reset.css);
-
 @import url(../css/base.css);
 
-.giftbox-pg{
-    margin-bottom: 40px;
-    /* border: 1px solid black; */
-    
+nav > ul > li:nth-child(3) > a{
+    color:#F5A651;
 }
 
+nav > ul > li:nth-child(3) > a:hover{
+    color: white;
+}
 /*-----------giftbox-pg------------*/
 
-.gft{
-    height: 380px;
-    /* border: 1px solid black; */
-    display: flex;
+/* .giftbox-pg{
+    margin-bottom: 40px;
+    /* border: 1px solid black;
+} */
 
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.giftbox-pg h3{
+.gift{
     margin-top: 110px;
     /* border: 1px solid black; */
     height: 30px;
@@ -32,7 +26,17 @@
     margin-bottom: 20px;
 }
 
-.giftbox-pg .pics5{
+.gft{
+    height: 380px;
+    /* border: 1px solid black; */
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.pics5{
     width: 50%;
     height: 380px;
     /* border: 1px solid black; */
@@ -48,7 +52,7 @@
     100%{transform: translateX(0); opacity: 1;}
 }
 
-.giftbox-pg .pics5 img{
+.pics5 img{
     width: 100%;
     height: 100%;
 }
@@ -80,5 +84,7 @@
     margin-top: 20px;
 }
 
-.txt6 li{}
+.txt6 li{
+
+}
 
