--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,3 @@
-@import url(../css/reset.css);
-
 @import url(../css/base.css);
 
 /* ---------banner------------- */
@@ -33,12 +31,13 @@
 }
 
 
+
 /* -----------------slogan------------------ */
 .slogan{
     /* width: 100%; */
     /* border: 1px solid black ; */
     display: flex;
-    margin-top: 40px;
+    margin-top: 20px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -46,7 +45,7 @@
    
 }
 
-.txt1{
+.slogan .txt1{
     /* border: 1px solid black; */
     width: 50%;
     box-sizing: border-box;
@@ -78,10 +77,10 @@
 }
 
 .txt1 a{
-    display: block;
+    
     box-sizing: border-box;
-    background-color: #F5A651;
-    color: white;
+    /* background-color: #F5A651;
+    color: white; */
     width: 80px;
     height: 30px;
     line-height: 30px;
@@ -92,20 +91,16 @@
     overflow: hidden;
     vertical-align: baseline;
     /* background: 0 0; */
-
-    animation: ccc 1s 4.1s infinite;
-    opacity: 0;
+    background-color: #F5A651;
+    color: white;
+    opacity: 0.7;
+    transition: all .5s;
 }
 
-@keyframes ccc{
-    0%{transform: translateY(0); opacity: 1;}
-    30%{transform: translateY(5px); opacity: 1;}
-    100%{transform: translateY(0); opacity: 1;}
-}
 
 .txt1 a:hover{
-    transform: scale(1.2);
-    top: 1px;
+    opacity: 5;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .pics1{
@@ -130,9 +125,7 @@
 .container h2{
     /* border: 1px solid black; */
     text-align: center;
-    margin-bottom: 40px;
-
-    
+    margin-bottom: 10px;
 }
 
 .content{
@@ -175,27 +168,27 @@
 .content p{}
 
 .container a{
-    display: block;
+    
     box-sizing: border-box;
     width: 160px;
     height: 30px;
     line-height: 30px;
     /* border: 1px solid black; */
     text-align: center;
+    margin: 0 auto;
+    margin-bottom: 5px;
+    /* border-radius: 5px; */
+    transition: all .5s;
     background-color: #F5A651;
     color: white;
-    margin: 0 auto;
-
-    margin-bottom: 5px;
-
-    animation: eee 1s infinite;
+    opacity: 0.7;
 }
 
-@keyframes eee{
-    0%{transform: translateY(0);}
-    30%{transform: translateY(5px);}
-    100%{transform: translateY(0);}
+.container a:hover{
+    opacity: 5;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
+
 
 /* -------gift box-------- */
 .gift{
@@ -210,14 +203,14 @@
     width: 600px;
     height: 400px;
     box-sizing: border-box;
-    
+    /* border: 1px solid black; */
 }
 
 .pics2 img{
     display: block;
     background-size: cover;
     width: 100%;
-    
+    font-size: 0;
 }
 
 .txt2{
@@ -234,39 +227,37 @@
 }
 
 .txt2 a{
-    display: block;
+    
     box-sizing: border-box;
     width: 80px;
     margin: 0 auto;
     /* border: 1px solid black; */
     height: 30px;
     line-height: 30px;
-    transition: all 1s;
+    transition: all .5s;
     background-color: #F5A651;
     color: white;
-
-    animation: fff 1s infinite;
+    opacity: 0.7;
 }
 
-@keyframes fff{
-    0%{transform: translateY(0);}
-    30%{transform: translateY(5px);}
-    100%{transform: translateY(0);}
+.txt2 a:hover{
+    opacity: 5;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
-.txt2 a:hover{}
 
 /* -------location--------- */
 .loc{
-    margin-top: 40px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 40px;
+    /* border: 1px solid black; */
 }
 
 .map{
     margin-right: auto;
+    font-size: 0;
 }
 
 .txt3{
