--- a/css/login_out.css
+++ b/css/login_out.css
@@ -1,15 +1,16 @@
-@import url(../css/reset.css);
-
 @import url(../css/base.css);
 
-/*--login/out--*/
-.login-pg{
-    margin-top: 110px;
-    /* border: 1px solid black; */
+nav > ul > li:last-child > a{
+    color:#F5A651;
 }
 
-.login-pg h3{
-    
+nav > ul > li:last-child > a:hover{
+    color: white;
+}
+
+/*--------------login/out--------------*/
+
+.bre{
     box-sizing: border-box;
     /* border: 1px solid black; */
     height: 30px;
@@ -19,9 +20,10 @@
     color: #1F3CA1;
     border-bottom: 1px solid #1F3CA1;
     margin-bottom: 20px;
+    margin-top: 110px;
 }
 
-.login-pg .top{
+.top{
     margin-top: 200px;
     height: 50px;
     line-height: 50px;
@@ -39,6 +41,12 @@
 @keyframes jjj{
     0%{transform: translateY(-300px); opacity: 0;}
     100%{transform: translateY(0); opacity: 1;}
+}
+
+.loi{
+    /* border: 1px solid black; */
+    text-align: center;
+    width: 100%;
 }
 
 .form1{
@@ -79,7 +87,7 @@
 }
 
 .form1 p{
-    padding-left: 22px;
+    padding-left: 48px;
 }
 
 
@@ -114,11 +122,10 @@
     text-align: center;
     font-size: 16px;
     margin-top: 20px;
-    margin-left: 120px;
+    margin-left: 140px;
 }
 
 .form1 a{
-    display: block;
     width: 75px;
     height: 30px;
     float: right;
@@ -128,5 +135,5 @@
     text-align: center;
     line-height: 30px;
     margin-top: 20px;
-    margin-right: 120px;
+    margin-right: 140px;
 }
