--- a/css/contactus.css
+++ b/css/contactus.css
@@ -1,4 +1,5 @@
 @import url(../css/base.css);
+@import url(../css/breadcrumb.css);
 
 nav > ul > li:nth-child(5) > a{
     color:#F5A651;
@@ -14,8 +15,8 @@ nav > ul > li:nth-child(5) > a:hover{
 } */
 
 
-/* ----------- sign up ------------- */
 
+/* ----------- sign up ------------- */
 
 .cnt{
     margin-top: 110px;
@@ -30,12 +31,25 @@ nav > ul > li:nth-child(5) > a:hover{
     margin-bottom: 20px;
 }
 
+form{
 
-.form{
-    /* border: 1px solid black; */
+}
+
+form > ul{
+    border: 1px solid #e5e5e5;
     width: 400px;
     margin: 0 auto;
     margin-bottom: 40px;
+    margin-top: 20px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, .3);
+}
+
+form > ul li:first-child{
+    margin-top: 20px;
+}
+
+form > ul input{
+    outline: 0;
 }
 
 .name{
@@ -48,6 +62,17 @@ nav > ul > li:nth-child(5) > a:hover{
     padding-left: 10px;
     border: 0;
     border-bottom: 1px solid #333;
+    transition: all 1s;
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
+input.name:focus{
+    border-color: #DEA43E;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
+    -webkit-appearance: none;
 }
 
 .phone{
@@ -60,6 +85,17 @@ nav > ul > li:nth-child(5) > a:hover{
     padding-left: 10px;
     border: 0;
     border-bottom: 1px solid #333;
+    transition: all 1s;
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
+input.phone:focus{
+    border-color: #DEA43E;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
+    -webkit-appearance: none;
 }
 
 .email{
@@ -72,6 +108,18 @@ nav > ul > li:nth-child(5) > a:hover{
     padding-left: 10px;
     border: 0;
     border-bottom: 1px solid #333;
+    transition: all 1s;
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
+input.email:focus{
+    border-color: #DEA43E;
+    outline: 0;
+    /* border: 0; */
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
+    -webkit-appearance: none;
 }
 
 .content{
@@ -84,9 +132,28 @@ nav > ul > li:nth-child(5) > a:hover{
     padding-left: 10px;
     border: 0;
     border-bottom: 1px solid #333;
+    transition: all 1s;
+    border-radius: 0;
 }
 
-p{
+input.content:focus{
+    border-color: #DEA43E;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
+    -webkit-appearance: none;
+}
+
+#file_name {
+    /* border: 1px solid blue; */
+    display: inline-block;
+    min-width: 50px;
+    height: 28px;
+    background-color: #F5A651;
+    color: white;
+}
+
+ul p{
     margin-bottom: 10px;
     margin-left: 25px;
 }
@@ -98,6 +165,7 @@ p{
     border: 0;
     background-color: #F5A651;
     color: white;
+    display: none;
 }
 
 .submit{
@@ -111,7 +179,24 @@ p{
     font-size: 16px;
     margin-left: 25px;
     margin-top: 20px;
+    margin-bottom: 20px;
+    -webkit-appearance: none;
+    border-radius: 5px;
 }
+
+button#choose_file{
+    margin-left: 25px;
+    border: 0;
+    border-radius: 5px;
+    background-color: #F5A651;
+    /* font-size: 20px; */
+    -webkit-appearance: none;
+}
+
+button#choose_file i{
+    
+}
+
 
 #img_block{
     margin-left: 25px;
@@ -124,4 +209,90 @@ p{
 
 .phone2{
     margin-left: 10px;
+}
+
+.small_width {
+    width: 110px;
+}
+
+/* ------------- Media Query ------------------ */
+
+/* ----------- 小於576px ------------- */
+@media screen and (max-width: 575.98px){
+    div.wrapper{
+        width: 100%;
+    }
+    form{
+        /* width: 100%; */
+        margin-bottom: 20px;
+    }
+    form > ul{
+        /* width: 100%; */
+        margin: 0 auto;
+    }
+    .submit{
+        display: block;
+        width: 75px;
+        height: 30px;
+        line-height: 30px;
+        border: 0;
+        background-color: #F5A651;
+        color: white;
+        font-size: 16px;
+        margin-left: 25px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+    ul p{
+        margin-bottom: 0;
+        padding-left: 25px;
+        /* border: 1px solid black;     */
+        margin: 0 auto;
+    }
+    ul > li{
+        /* border: 1px solid black; */
+    }
+    ul p{
+        margin-bottom: 10px;
+    }
+    .name{
+        margin-top: 10px;
+    }
+}
+
+/* ---------- 介於576px ~ 768px -------------- */
+@media screen and (min-width: 576px) and (max-width: 767.98px){
+    div.wrapper{
+        width: 540px;
+        margin: 0 auto;
+    }
+    
+}
+
+/* ----------- 介於768px ~ 992px ------------- */
+@media screen and (min-width: 768px) and (max-width: 991.98px){
+    div.wrapper{
+        width: 720px;
+        margin: 0 auto;
+    }
+    
+}
+
+/* ------------------- 介於992xp ~ 1200px --------------------------- */
+@media screen and (min-width: 992px) and (max-width: 1199.98px){
+    div.wrapper{
+        width: 960px;
+        margin: 0 auto;
+    }
+       
+}
+
+/* -------------------- 介於1200px ~ 1400px ----------------------------- */
+@media screen and (min-width: 1200px) and (max-width: 1399.98px){
+    div.wrapper{
+        width: 1140px;
+        margin: 0 auto;
+    }
+      
 }
